# datasette-graphql

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: deploy-demo.yml  publish.yml  test.yml
datasette_graphql/: __init__.py  hookspecs.py  utils.py
datasette_graphql/static/: fetch.min.js  fetch_latest.py
datasette_graphql/templates/: graphiql.html
examples/: README.md  base64.md  basic.md  filters.md  fragments.md  nested.md  nullable.md  related.md  related_multiple.md  search.md  sort.md  sort_desc.md  sql_view.md  table_get.md  table_row.md  variables.md  where.md
tests/: conftest.py  fixtures.py  test_docs.py  test_graphql.py  test_plugin_hook.py  test_schema_caching.py  test_schema_for_database.py  test_template_tag.py  test_utils.py
